--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.9"
+qiskit = "^1.2.0"
+qi-compute-api-client = "^0.33.0"
+pydantic = "^2.8.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
