--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ classifiers = [
 python = "^3.9"
 qiskit = "^1.2.0"
 qi-compute-api-client = "^0.33.0"
-pydantic = "^2.9.0"
+pydantic = "^2.8.2"
+requests = "^2.32.3"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
@@ -32,6 +33,9 @@ pytest-asyncio = "^0.24.0"
 pytest-cov = "^5.0.0"
 pytest-mock = "^3.14.0"
 ruff = "^0.6.4"
+freezegun = "^1.5.1"
+responses = "^0.25.3"
+types-requests = "^2.25.0"
 
 # [tool.pytest.ini_options]
 # addopts = "-v --cov --cov-report term-missing:skip-covered --cov-report xml"
