--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.9"
 qiskit = "^1.2.0"
-qi-compute-api-client = "^0.33.0"
+# qi-compute-api-client = "^0.35.0"
+qi-compute-api-client = { path = "../platform/src/python/libs/compute-api-client", develop = true }
 pydantic = "^2.8.2"
 requests = "^2.32.3"
 
