--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ qiskit = "^1.2.0"
 qi-compute-api-client = { path = "../platform/src/python/libs/compute-api-client", develop = true }
 pydantic = "^2.8.2"
 requests = "^2.32.3"
+pytest-asyncio = "^0.24.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
