--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,15 @@
 {
     "python.analysis.extraPaths": [
         "qiskit_quantuminspire"
-    ]
+    ],
+    "editor.codeActionsOnSave": {},
+    "editor.formatOnSave": true,
+    "black-formatter.path": [
+        "${command:python.interpreterPath}"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true,
+    "python.testing.pytestPath": "${command:python.interpreterPath}",
+    "python.testing.autoTestDiscoverOnSaveEnabled": true,
+    "python.testing.cwd": "${workspaceFolder}",
 }
