--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,9 +19,10 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.9"
 qiskit = "^1.2.0"
-qi-compute-api-client = "^0.33.0"
+qi-compute-api-client = "^0.35.0"
 pydantic = "^2.9.1"
 requests = "^2.32.3"
+pytest-asyncio = "^0.24.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
