--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,6 +1,10 @@
 name: Releases
 
 on:
+  pull_request:
+    push:
+      branches:
+        - master
   release:
     types:
       - created
@@ -10,7 +14,7 @@ jobs:
     name: Publish to TestPyPI
     runs-on: "ubuntu-latest"
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@master
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -20,11 +24,16 @@ jobs:
         with:
           poetry-version: "1.3.2"
       - name: Version poetry package
-        run: poetry version "${{  github.ref_name }}"
+        run: poetry version "${{  github.ref_name }}+`echo ${{ github.ref_name }} | head -c 5`"
       - name: Build poetry package
         run: poetry build
-      - name: Publish distribution 📦 to PyPI
+      - name: Publish distribution 📦 to Test PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           password: ${{ secrets.TEST_PYPI_API_TOKEN }}
           repository_url: https://test.pypi.org/legacy/
+      - name: Publish distribution 📦 to PyPI
+        if: startsWith(github.ref, 'refs/tags')
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          password: ${{ secrets.PYPI_API_TOKEN }}
