--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,6 +15,8 @@ jobs:
     runs-on: "ubuntu-latest"
     steps:
       - uses: actions/checkout@master
+      - name: Create commit identifier
+        run: echo "COMMIT_ID=${{ github.sha }} | head -c 5" >> $GITHUB_ENV
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -23,8 +25,12 @@ jobs:
         uses: abatilo/actions-poetry@v3
         with:
           poetry-version: "1.3.2"
-      - name: Version poetry package
-        run: poetry version "${{  github.ref_name }}+`echo ${{ github.ref_name }} | head -c 5`"
+      - name: Version poetry package for test
+        if: endsWith(github.ref, '/merge')
+        run: poetry version "`poetry version | awk '{print $2}'`+$COMMIT_ID"
+      - name: Version poetry package for release
+        if: startsWith(github.ref, 'refs/tags')
+        run: poetry version "${{  github.ref_name }}+$COMMIT_ID"
       - name: Build poetry package
         run: poetry build
       - name: Publish distribution 📦 to Test PyPI
