[QI2-1092] add id token write permission

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,6 +13,8 @@ jobs:
   publish:
     name: Publish to TestPyPI
     runs-on: "ubuntu-latest"
+    permissions:
+      id-token: write
     steps:
       - uses: actions/checkout@master
       - name: Create commit identifier
