--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,44 +17,39 @@ jobs:
       id-token: write
     steps:
       - uses: actions/checkout@master
-
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-
       - name: Install poetry
         uses: abatilo/actions-poetry@v3
         with:
           poetry-version: "1.8.3"
 
+      # Setting the proper version
       - name: Get previous Tag
         if: github.ref == 'refs/heads/master'
-        id: previoustag
+        id: previous_tag
         uses: WyriHaximus/github-action-get-previous-tag@v1
-
       - name: Set Build version
-        if: github.event.pull_request.merged == true
+        if: github.ref == 'refs/heads/master'
         run: |
           COMMIT_ID=`echo ${{ github.sha }} | head -c 8`
-          poetry version "${{ steps.previoustag.outputs.tag }}+$COMMIT_ID"
-
+          poetry version "${{ steps.previous_tag.outputs.tag }}+$COMMIT_ID"
       - name: Set Release version
         if: github.event_name == 'release' && github.event.action == 'created'
         run: poetry version ${{ github.ref_name }}
 
+      # Build package
       - name: Build poetry package
         run: poetry build
 
+      # Publishing the package
       - name: Publish distribution 📦 to Test PyPI
-        if: github.event.pull_request.merged == true
+        if: github.ref == 'refs/heads/master'
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
           repository-url: https://test.pypi.org/legacy/
-
       - name: Publish distribution 📦 to PyPI
         if: github.event_name == 'release' && github.event.action == 'created'
         uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          password: ${{ secrets.PYPI_API_TOKEN }}
