--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,6 +1,10 @@
 name: Releases
 
 on:
+  pull_request:
+  push:
+    branches:
+      - master
   release:
     types:
       - created
@@ -9,22 +13,43 @@ jobs:
   publish:
     name: Publish to TestPyPI
     runs-on: "ubuntu-latest"
+    permissions:
+      id-token: write
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@master
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.8"
+          python-version: "3.11"
       - name: Install poetry
         uses: abatilo/actions-poetry@v3
         with:
-          poetry-version: "1.3.2"
-      - name: Version poetry package
-        run: poetry version "${{  github.ref_name }}"
+          poetry-version: "1.8.3"
+
+      # Setting the proper version
+      - name: Get previous Tag
+        if: github.ref == 'refs/heads/master'
+        id: previous_tag
+        uses: WyriHaximus/github-action-get-previous-tag@v1
+      - name: Set Build version
+        if: github.ref == 'refs/heads/master'
+        run: |
+          COMMIT_ID=`echo ${{ github.sha }} | head -c 8`
+          poetry version "${{ steps.previous_tag.outputs.tag }}+$COMMIT_ID"
+      - name: Set Release version
+        if: github.event_name == 'release' && github.event.action == 'created'
+        run: poetry version ${{ github.ref_name }}
+
+      # Build package
       - name: Build poetry package
         run: poetry build
-      - name: Publish distribution 📦 to PyPI
+
+      # Publishing the package
+      - name: Publish distribution 📦 to Test PyPI
+        if: github.ref == 'refs/heads/master'
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-          repository_url: https://test.pypi.org/legacy/
+          repository-url: https://test.pypi.org/legacy/
+      - name: Publish distribution 📦 to PyPI
+        if: github.event_name == 'release' && github.event.action == 'created'
+        uses: pypa/gh-action-pypi-publish@release/v1
