--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,6 +31,7 @@ jobs:
         if: github.ref == 'refs/heads/master'
         id: previous_tag
         uses: WyriHaximus/github-action-get-previous-tag@v1
+        fallback: 0.1
       - name: Set Build version
         if: github.ref == 'refs/heads/master'
         run: |
