[QI2-1092] release to pypi fallback version (#28)
Co-authored-by: napocornejo <ncornejo@geokapti.nl>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,6 +31,8 @@ jobs:
         if: github.ref == 'refs/heads/master'
         id: previous_tag
         uses: WyriHaximus/github-action-get-previous-tag@v1
+        with:
+          fallback: 0.1.0
       - name: Set Build version
         if: github.ref == 'refs/heads/master'
         run: |
