--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,9 +35,7 @@ jobs:
           fallback: 0.1.0
       - name: Set Build version
         if: github.ref == 'refs/heads/master'
-        run: |
-          COMMIT_ID=`echo ${{ github.sha }} | head -c 8`
-          poetry version "${{ steps.previous_tag.outputs.tag }}+$COMMIT_ID"
+        run: poetry version "${{ steps.previous_tag.outputs.tag }}.dev${{ github.run_number }}"
       - name: Set Release version
         if: github.event_name == 'release' && github.event.action == 'created'
         run: poetry version ${{ github.ref_name }}
