--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   publish:
-    name: Publish to TestPyPI
+    name: Publish assets
     runs-on: "ubuntu-latest"
     permissions:
       id-token: write
