--- a/.github/workflows/docs-preview.yaml
+++ b/.github/workflows/docs-preview.yaml
@@ -21,6 +21,8 @@ jobs:
       - name: Install and Build
         if: github.event.action != 'closed' # You might want to skip the build if the PR has been closed
         run: |
+          python -m pip install --upgrade pip
+          pip install tox
           tox -e docs
 
       - name: Deploy preview
