--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,9 +37,11 @@ ruff = "^0.7.0"
 freezegun = "^1.5.1"
 responses = "^0.25.3"
 types-requests = "^2.25.0"
-sphinx = "^7.4.7"
-myst-parser = "^3.0.1"
-furo = "^2024.8.6"
+
+[tool.poetry.group.docs.dependencies]
+sphinx = {version = "^8.1.3", python = "^3.10"}
+myst-parser = {version = "^4.0.0", python = "^3.10"}
+furo = {version = "^2024.8.6", python = "^3.10"}
 
 # [tool.pytest.ini_options]
 # addopts = "-v --cov --cov-report term-missing:skip-covered --cov-report xml"
