--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,8 +40,8 @@ types-requests = "^2.25.0"
 
 [tool.poetry.group.docs.dependencies]
 sphinx = {version = "^8.1.3", python = "^3.10"}
-myst-parser = {version = "^4.0.0", python = "^3.10"}
 furo = {version = "^2024.8.6", python = "^3.10"}
+myst-nb = {version = "^1.1.2", python = "^3.10"}
 
 # [tool.pytest.ini_options]
 # addopts = "-v --cov --cov-report term-missing:skip-covered --cov-report xml"
