--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -33,12 +33,26 @@ jobs:
         uses: WyriHaximus/github-action-get-previous-tag@v1
         with:
           fallback: 0.1.0
+
       - name: Set Build version
         if: github.ref == 'refs/heads/master'
         run: poetry version "${{ steps.previous_tag.outputs.tag }}.dev${{ github.run_number }}"
+        
       - name: Set Release version
         if: github.event_name == 'release' && github.event.action == 'created'
         run: poetry version ${{ github.ref_name }}
+
+      # Build and deploy docs
+      - name: Build docs
+        run: |
+          tox -e docs
+
+      - name: Deploy docs
+        if: github.ref == 'refs/heads/master'
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs/_build/html/
 
       # Build package
       - name: Build poetry package
