--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,14 +17,19 @@ jobs:
       id-token: write
     steps:
       - uses: actions/checkout@master
+      
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
       - name: Install poetry
         uses: abatilo/actions-poetry@v3
         with:
           poetry-version: "1.8.3"
+
+      - name: Install tox
+        run: pip install tox
 
       # Setting the proper version
       - name: Get previous Tag
@@ -44,6 +49,7 @@ jobs:
 
       # Build and deploy docs
       - name: Build docs
+        if: github.ref == 'refs/heads/master'
         run: |
           tox -e docs
 
@@ -65,6 +71,7 @@ jobs:
         with:
           repository-url: https://test.pypi.org/legacy/
           verbose: true
+
       - name: Publish distribution 📦 to PyPI
         if: github.event_name == 'release' && github.event.action == 'created'
         uses: pypa/gh-action-pypi-publish@release/v1
