--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ types-requests = "^2.25.0"
 sphinx = {version = "^8.1.3", python = "^3.10"}
 furo = {version = "^2024.8.6", python = "^3.10"}
 myst-nb = {version = "^1.1.2", python = "^3.10"}
+qiskit-sphinx-theme = {version = "^2.0.0", python = "^3.10"}
 tomli = "^2.0.2"
 
 # [tool.pytest.ini_options]
