--- a/.github/workflows/docs-preview.yaml
+++ b/.github/workflows/docs-preview.yaml
@@ -8,6 +8,8 @@ on:
       - reopened
       - synchronize
       - closed
+    paths:
+      - 'docs/**'
 
 concurrency: preview-${{ github.ref }}
 
