--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,14 +17,19 @@ jobs:
       id-token: write
     steps:
       - uses: actions/checkout@master
+      
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
       - name: Install poetry
         uses: abatilo/actions-poetry@v3
         with:
           poetry-version: "1.8.3"
+
+      - name: Install tox
+        run: pip install tox
 
       # Setting the proper version
       - name: Get previous Tag
@@ -33,12 +38,27 @@ jobs:
         uses: WyriHaximus/github-action-get-previous-tag@v1
         with:
           fallback: 0.1.0
+
       - name: Set Build version
         if: github.ref == 'refs/heads/master'
         run: poetry version "${{ steps.previous_tag.outputs.tag }}.dev${{ github.run_number }}"
+        
       - name: Set Release version
         if: github.event_name == 'release' && github.event.action == 'created'
         run: poetry version ${{ github.ref_name }}
+
+      # Build and deploy docs
+      - name: Build docs
+        if: github.ref == 'refs/heads/master'
+        run: |
+          tox -e docs
+
+      - name: Deploy docs
+        if: github.ref == 'refs/heads/master'
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs/_build/html/
 
       # Build package
       - name: Build poetry package
@@ -51,6 +71,7 @@ jobs:
         with:
           repository-url: https://test.pypi.org/legacy/
           verbose: true
+
       - name: Publish distribution 📦 to PyPI
         if: github.event_name == 'release' && github.event.action == 'created'
         uses: pypa/gh-action-pypi-publish@release/v1
