--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,13 @@ freezegun = "^1.5.1"
 responses = "^0.25.3"
 types-requests = "^2.25.0"
 
+[tool.poetry.group.docs.dependencies]
+sphinx = {version = "^8.1.3", python = "^3.10"}
+furo = {version = "^2024.8.6", python = "^3.10"}
+myst-nb = {version = "^1.1.2", python = "^3.10"}
+qiskit-sphinx-theme = {version = "^2.0.0", python = "^3.10"}
+tomli = "^2.0.2"
+
 # [tool.pytest.ini_options]
 # addopts = "-v --cov --cov-report term-missing:skip-covered --cov-report xml"
 # asyncio_mode = "auto"
