--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   testing:
-    uses: qutech-delft/github-actions/.github/workflows/poetry-tests.yaml@fix/QI2-1219/fix-failing-action-import
+    uses: qutech-delft/github-actions/.github/workflows/poetry-tests.yaml@master
     secrets:
       e2e_username:  ${{ secrets.E2E_USERNAME }}
       e2e_password:  ${{ secrets.E2E_PASSWORD }}
