--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -83,6 +83,8 @@ jobs:
         uses: abatilo/actions-poetry@v3
         with:
           poetry-version: "1.3.2"
+      - name: Create folder
+        run: mkdir -p /scripts
       - name: Get authentication token
         run: |
           python -m venv env
@@ -92,7 +94,7 @@ jobs:
           mkdir -p ~/.quantuminspire
           python $CI_ROOT/scripts/get_oauth_tokens.py > ~/.quantuminspire/config.json
           deactivate
-        working-directory: ./ci-scripts
+        working-directory: /scripts
       - name: Install packages
         run: poetry install
       - name: Run e2e test
