--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -84,7 +84,7 @@ jobs:
         with:
           poetry-version: "1.3.2"
       - name: Create folder
-        run: mkdir -p /scripts
+        run: mkdir -p ./ci-scripts
       - name: Get authentication token
         run: |
           python -m venv env
@@ -94,7 +94,7 @@ jobs:
           mkdir -p ~/.quantuminspire
           python $CI_ROOT/scripts/get_oauth_tokens.py > ~/.quantuminspire/config.json
           deactivate
-        working-directory: /scripts
+        working-directory: ./ci-scripts
       - name: Install packages
         run: poetry install
       - name: Run e2e test
