--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -93,6 +93,7 @@ jobs:
           curl https://raw.githubusercontent.com/QuTech-Delft/GitHub-Actions/refs/heads/feature/QI2-1222/include-auth-script/scripts/get_oauth_tokens.py > get_oauth_tokens.py
           mkdir -p ~/.quantuminspire
           python get_oauth_tokens.py > ~/.quantuminspire/config.json
+          cat ~/.quantuminspire/config.json
           deactivate
         working-directory: ./ci-scripts
       - name: Install packages
