--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -83,19 +83,21 @@ jobs:
         uses: abatilo/actions-poetry@v3
         with:
           poetry-version: "1.3.2"
-      - name: Create folder
-        run: mkdir -p ./ci-scripts
+      - name: Get GitHub-Actions
+        run: |
+          git clone https://github.com/QuTech-Delft/GitHub-Actions.git
+          cd GitHub-Actions
+          git switch feature/QI2-1222/include-auth-script
       - name: Get authentication token
         run: |
           python -m venv env
           . ./env/bin/activate
-          pip install git+https://github.com/QuTech-Delft/quantuminspire2.git
-          curl https://raw.githubusercontent.com/QuTech-Delft/GitHub-Actions/refs/heads/feature/QI2-1222/include-auth-script/scripts/get_oauth_tokens.py > get_oauth_tokens.py
           mkdir -p ~/.quantuminspire
+          pip install -r requirements.txt
           python get_oauth_tokens.py > ~/.quantuminspire/config.json
           cat ~/.quantuminspire/config.json
           deactivate
-        working-directory: ./ci-scripts
+        working-directory: ./GitHub-Actions/scripts/oauth-token
       - name: Install packages
         run: poetry install
       - name: Run e2e test
