Pass github token along

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,3 +19,5 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: QuTech-Delft/GitHub-Actions/actions/python/poetry-release@feature/QI2-1241/rework-to-composite-actions
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
