--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ requests = "^2.32.3"
 opensquirrel = "^0.1.0"
 
 [tool.poetry.group.dev.dependencies]
-black = "^24.10.0"
+black = {extras = ["jupyter"], version = "^24.10.0"}
 coverage = {extras = ["toml"], version = "^7.6.9"}
 docformatter = "1.7.5"
 mypy = "^1.14"
