--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ qiskit = "^1.2.0"
 qi-compute-api-client = "^0.44.0"
 pydantic = "^2.10.5"
 requests = "^2.32.3"
-opensquirrel = ">=0.1.0"
+opensquirrel = "0.2.0"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "^24.10.0"}
