--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,20 +14,20 @@ classifiers = [
   'Programming Language :: Python :: 3.10',
   'Programming Language :: Python :: 3.11',
   'Programming Language :: Python :: 3.12',
-  'License :: OSI Approved :: Apache Software License'
+  'License :: OSI Approved :: Apache Software License',
 ]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-qiskit = "^1.2.0"
+qiskit = "^2.0.2"
 qi-compute-api-client = "^0.50.0"
 pydantic = "^2.10.6"
 requests = "^2.32.3"
 opensquirrel = "0.5.0"
 
 [tool.poetry.group.dev.dependencies]
-black = {extras = ["jupyter"], version = ">=24.10,<26.0"}
-coverage = {extras = ["toml"], version = "^7.6.10"}
+black = { extras = ["jupyter"], version = ">=24.10,<26.0" }
+coverage = { extras = ["toml"], version = "^7.6.10" }
 docformatter = "1.7.7"
 mypy = "^1.14"
 pytest = {extras = ["toml"], version = "^8.3.4"}
@@ -41,10 +41,10 @@ responses = "^0.25.6"
 types-requests = "^2.32.0"
 
 [tool.poetry.group.docs.dependencies]
-sphinx = {version = "^8.1.3", python = "^3.10"}
-furo = {version = "^2024.8.6", python = "^3.10"}
-myst-nb = {version = "^1.1.2", python = "^3.10"}
-qiskit-sphinx-theme = {version = "^2.0.0", python = "^3.10"}
+sphinx = { version = "^8.1.3", python = "^3.10" }
+furo = { version = "^2024.8.6", python = "^3.10" }
+myst-nb = { version = "^1.1.2", python = "^3.10" }
+qiskit-sphinx-theme = { version = "^2.0.0", python = "^3.10" }
 tomli = "^2.2.1"
 
 # [tool.pytest.ini_options]
@@ -61,10 +61,10 @@ omit = ["tests/*", "**/.tox/**", "scratch"]
 show_missing = true
 fail_under = 100
 exclude_lines = [
-    "pragma: no cover",
-    "raise AssertionError",
-    "raise NotImplementedError",
-    "if __name__ == .__main__.:"
+  "pragma: no cover",
+  "raise AssertionError",
+  "raise NotImplementedError",
+  "if __name__ == .__main__.:",
 ]
 
 [tool.black]
