--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ pytest = {extras = ["toml"], version = "^8.3.4"}
 pytest-asyncio = ">=0.25.2,<1.3.0"
 pytest-cov = ">=6,<8"
 pytest-mock = "^3.14.0"
+pytest-xdist = ">=3.6.1"
 ruff = ">=0.9.3,<0.14.0"
 freezegun = "^1.5.1"
 responses = "^0.25.6"
