--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.9"
-qiskit = "~2.1.0"
+qiskit = ">=2.0.0,<2.2.0"
 qi-compute-api-client = "^0.50.0"
 pydantic = "^2.10.6"
 requests = "^2.32.3"
@@ -46,11 +46,6 @@ furo = { version = "^2024.8.6", python = "^3.10" }
 myst-nb = { version = "^1.1.2", python = "^3.10" }
 qiskit-sphinx-theme = { version = "^2.0.0", python = "^3.10" }
 tomli = "^2.2.1"
-
-# [tool.pytest.ini_options]
-# addopts = "-v --cov --cov-report term-missing:skip-covered --cov-report xml"
-# asyncio_mode = "auto"
-# testpaths = ["tests"]
 
 [tool.coverage.run]
 branch = true
