--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "qiskit-quantuminspire"
-version = "0.10.0"
+version = "0.13.0"
 description = "Qiskit provider for Quantum Inspire backends "
 authors = ["Quantum Inspire <support@quantum-inspire.com>"]
 readme = "README.md"
@@ -14,23 +14,23 @@ classifiers = [
   'Programming Language :: Python :: 3.10',
   'Programming Language :: Python :: 3.11',
   'Programming Language :: Python :: 3.12',
-  'License :: OSI Approved :: Apache Software License'
+  'License :: OSI Approved :: Apache Software License',
 ]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-qiskit = "^1.2.0"
+qiskit = ">=2.0.0,<2.2.0"
 qi-compute-api-client = "^0.50.0"
 pydantic = "^2.10.6"
 requests = "^2.32.3"
 opensquirrel = "0.5.0"
 
 [tool.poetry.group.dev.dependencies]
-black = {extras = ["jupyter"], version = ">=24.10,<26.0"}
-coverage = {extras = ["toml"], version = "^7.6.10"}
+black = { extras = ["jupyter"], version = ">=24.10,<26.0" }
+coverage = { extras = ["toml"], version = "^7.6.10" }
 docformatter = "1.7.7"
 mypy = "^1.14"
-pytest = {extras = ["toml"], version = "^8.3.4"}
+pytest = { extras = ["toml"], version = "^8.3.4" }
 pytest-asyncio = ">=0.25.2,<1.3.0"
 pytest-cov = ">=6,<8"
 pytest-mock = "^3.14.0"
@@ -41,16 +41,11 @@ responses = "^0.25.6"
 types-requests = "^2.32.0"
 
 [tool.poetry.group.docs.dependencies]
-sphinx = {version = "^8.1.3", python = "^3.10"}
-furo = {version = "^2024.8.6", python = "^3.10"}
-myst-nb = {version = "^1.1.2", python = "^3.10"}
-qiskit-sphinx-theme = {version = "^2.0.0", python = "^3.10"}
+sphinx = { version = "^8.1.3", python = "^3.10" }
+furo = { version = "^2024.8.6", python = "^3.10" }
+myst-nb = { version = "^1.1.2", python = "^3.10" }
+qiskit-sphinx-theme = { version = "^2.0.0", python = "^3.10" }
 tomli = "^2.2.1"
-
-# [tool.pytest.ini_options]
-# addopts = "-v --cov --cov-report term-missing:skip-covered --cov-report xml"
-# asyncio_mode = "auto"
-# testpaths = ["tests"]
 
 [tool.coverage.run]
 branch = true
@@ -61,10 +56,10 @@ omit = ["tests/*", "**/.tox/**", "scratch"]
 show_missing = true
 fail_under = 100
 exclude_lines = [
-    "pragma: no cover",
-    "raise AssertionError",
-    "raise NotImplementedError",
-    "if __name__ == .__main__.:"
+  "pragma: no cover",
+  "raise AssertionError",
+  "raise NotImplementedError",
+  "if __name__ == .__main__.:",
 ]
 
 [tool.black]
