--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "qiskit-quantuminspire"
-version = "0.13.0"
+version = "0.14.0"
 description = "Qiskit provider for Quantum Inspire backends "
 authors = ["Quantum Inspire <support@quantum-inspire.com>"]
 readme = "README.md"
@@ -23,6 +23,7 @@ qi-compute-api-client = "^0.50.0"
 pydantic = "^2.10.6"
 requests = "^2.32.3"
 opensquirrel = "0.8.0"
+colorama = "^0.4.6"
 
 [tool.poetry.group.dev.dependencies]
 black = { extras = ["jupyter"], version = ">=24.10,<26.0" }
