--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "qiskit-quantuminspire"
-version = "0.13.0"
+version = "0.14.0"
 description = "Qiskit provider for Quantum Inspire backends "
 authors = ["Quantum Inspire <support@quantum-inspire.com>"]
 readme = "README.md"
@@ -10,7 +10,6 @@ documentation = "https://qutech-delft.github.io/qiskit-quantuminspire/"
 classifiers = [
   'Development Status :: 4 - Beta',
   'Programming Language :: Python :: 3',
-  'Programming Language :: Python :: 3.9',
   'Programming Language :: Python :: 3.10',
   'Programming Language :: Python :: 3.11',
   'Programming Language :: Python :: 3.12',
@@ -18,12 +17,13 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.10"
 qiskit = ">=2.0.0,<2.2.0"
 qi-compute-api-client = "^0.50.0"
 pydantic = "^2.10.6"
 requests = "^2.32.3"
-opensquirrel = "0.5.0"
+opensquirrel = "0.8.0"
+colorama = "^0.4.6"
 
 [tool.poetry.group.dev.dependencies]
 black = { extras = ["jupyter"], version = ">=24.10,<26.0" }
