--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "qiskit-quantuminspire"
-version = "0.14.0"
+version = "0.16.0"
 description = "Qiskit provider for Quantum Inspire backends "
 authors = ["Quantum Inspire <support@quantum-inspire.com>"]
 readme = "README.md"
@@ -13,13 +13,14 @@ classifiers = [
   'Programming Language :: Python :: 3.10',
   'Programming Language :: Python :: 3.11',
   'Programming Language :: Python :: 3.12',
+  'Programming Language :: Python :: 3.13',
   'License :: OSI Approved :: Apache Software License',
 ]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.14"
 qiskit = ">=2.0.0,<2.2.0"
-qi-compute-api-client = "^0.50.0"
+qi-compute-api-client = "^0.56.0"
 pydantic = "^2.10.6"
 requests = "^2.32.3"
 opensquirrel = "0.8.0"
